# TLSLibrary

./: CMakeLists.txt  Makefile  README.md  client_tls_pq.c  opensslaes.c  opensslaes.h  params.h  pq.c  pq.h  server_tls_pq.c  vault.c  vault.h
dilithium1aes/: .Makefile.swp  Makefile  PQCgenKAT_sign.c  aes256ctr.c  aes256ctr.h  api.h  config.h  fips202.c  fips202.h  ntt.c  ntt.h  packing.c  packing.h  params.h  poly.c  poly.h  polyvec.c  polyvec.h  randombytes.c  reduce.c  rng.c  rounding.c  rounding.h  sign.c  sign.h  symmetric.h
dilithium1aes/test/: cpucycles.h  speed.c  test_dilithium.c  test_mul.c  test_vectors.c
kyber/: .travis.yml  AUTHORS  CMakeLists.txt  Kyber1024-90s_META.yml  Kyber1024_META.yml  Kyber512-90s_META.yml  Kyber512_META.yml  Kyber768-90s_META.yml  Kyber768_META.yml  LICENSE  Makefile  PQCgenKAT_kem.c  README.md  SHA256SUMS  apiky.h  cbd.c  cbd.h  fips202ky.c  indcpa.c  indcpa.h  kem.c  kem.h  kex.c  kex.h  nttky.c  nttky.h  paramsky.h  polyky.c  polyky.h  polyvec.c  polyvec.h  randombytesky.c  reduceky.c  reduceky.h  rngky.c  runlcov.sh  runtests.sh  symmetric-aes.c  symmetric-shake.c  symmetric.h  (+5 more)
kyber/avx2/: Makefile  aes256ctr.c  aes256ctr.h  align.h  api.h  basemul.S  cbd.c  cbd.h  consts.c  consts.h  fips202x4.c  fips202x4.h  fq.S  fq.inc  indcpa.c  invntt.S  kem.c  ntt.S  ntt.h  params.h  poly.c  poly.h  polyvec.c  polyvec.h  reduce.h  (+8 more)
matlabcode/: Div_mod.m  Div_mod2.m  Eval_poly.m  Filtro_Calidad.m  Filtro_distancia.m  Generar_Comb.m  Generar_llave.m  Minutia_quality.m  Prueba_Lagrange.m  Prueba_Lagrange2.m  Quant.m  Vault_Decoding.m  Vault_Encoding.m  engine.m  extractminutae2.m  generar_template.m  generate_chaff_points.m  get_Coeff_Dermonde.m  obtener_minucia_consulta.m  remove_NG.m  show_minutia.m  show_minutia_all.m  vander_mod.m
valores_de_prueba/: Vault105-1.txt
(+24 files in other folders)
